--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -147,14 +147,31 @@
       </p>
       <img src="assets/images/footer/logo.svg" alt="logotipo Dio" />
     </footer>
-    <!----
-    <script type="module" src="assets/"></script>
-    <script> 
-     function switch-theme(){
-      document.body.classlist.toggle('dark-theme')
-      document.body.classlist.toggle('light-theme')
-     }
+    
+    <script type="module" src="assets/js/main.js"></script>
+    <script>
+      //função criada pra musica tocar só depois de clicar em qualquer lugar da pagina
+      window.addEventListener('click', function() {
+        const audio = document.getElementById('music');
+        audio.play();
+        audio.volume = 0.2;
+      });
 
-    </script>-->
+      //função pra trocar a o tema de acordo com o id do elemento
+      function switchTheme() {
+        document.body.classList.toggle('dark-theme');
+        document.body.classList.toggle('light-theme');
+
+        document.body.setAttribute('aria-label', 'Trocando o tema');
+
+        const theme = document.body.classList[0];
+        const music = theme === 'light-theme' ? 'normal-world.mpeg' : 'inverted-world.mpeg'
+
+        const audio = document.getElementById('music');
+        audio.src = `assets/musics/${music}`;
+        audio.play();
+        audio.volume = 0.2;
+      }
+    </script>
   </body>
 </html>
