--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -148,7 +148,7 @@
       <img src="assets/images/footer/logo.svg" alt="logotipo Dio" />
     </footer>
     
-    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src=""></script>
     <script>
       //função criada pra musica tocar só depois de clicar em qualquer lugar da pagina
       window.addEventListener('click', function() {
