--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -148,7 +148,7 @@
       <img src="assets/images/footer/logo.svg" alt="logotipo Dio" />
     </footer>
     
-    <script src="assets/js/main.js/world-inverted.js">
+    <script src="assets/js/main.js/script.js">
      
     </script>
   </body>
